assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Raleway:wght@300;400;500&display=swap');
Sans-serif

header {
    margin: 0;
    padding: 0;
    height: 80px; 
}

body {
    padding: 0;
    
}


p {
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    text-align: center;
    padding-bottom: 20px;
    margin-bottom: 0px;
}

h3 {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
}

/*-------Background-----*/

.services,
.coach,
.timetable,
.sign-up {
   background: url(../assets/images/light-background.jpg) repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-width: 100%;
  height: auto;
  

}


/*-------Navigation-----*/

.menu {
    background-color: #072446;
}

/*-------Logo-----*/
.logo h1 {
   color: #fafafa;
   font-family: 'Monstserrat', sans-serif ;
   font-weight: 600;
   text-decoration: none;
}


.logo a i {
    color: #fafafa;
    line-height: 45px;
    font-size: 40px;
    text-decoration-line: none;
    padding-left: 20px;
}

.logo a {
    text-decoration: none;
}



.header-icon:hover {
    color: #e1aa12;
    text-decoration: none;
}

.header-icon {
    color: #fafafa;
    line-height: 45px;
    font-size: 40px;
    text-decoration-line: none;
    padding-left: 20px;
    font-family: 'Monstserrat', sans-serif ; 
} 


.navbar-light .navbar-toggler {
    background-color: #e1aa12;
    padding: 10px;
    margin: 15px;
    float: right;
}

.navbar-light .navbar-nav .nav-link {
    color: #fafafa;
    font-family: 'Monstserrat', sans-serif;
    font-size: x-large;
    text-align: right;
    padding-right: 20px;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #e1aa12;
}

.navbar-brand2 {
    color: #fafafa;
    text-decoration: none;
    text-decoration-line: none;
}


.menu li {
  color: #fafafa;

}

.navbar-expand-lg .navbar-collapse{
    background-color: #072446;
    
}

#mynav li a {
    float: right;
}

/*-------heading-----*/

.uppercase {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
    text-transform: uppercase;
    color: #24292e;
}
/*-----------Hero Image------*/
.hero-image {
    width: 100%;
    height: auto;
    padding: 0;
}

.hero-image img {
   padding: 0;
   margin: 0;
   height: auto;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-width: 100%;
  
  

}
/*-----------about------*/

.about {
    background-color: #e1aa12;
    width: 100%;
    height: max-content;
    padding-top: 3.5rem;
    margin-bottom: 0;
    min-width: 100%;
    content: cover;
  
}

.about p {
    font-family: 'Raleway', sans-serif;
    font-weight: 500;
    text-align: center;
    width: 90%;
    padding: 0 10px 20px 10px;
}

/*-----------services------*/

.service-item {
    padding: 0;
    margin: 0;
}

.services-heading {
    padding: 0;
}

.services h3 {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
}

.s-container {
    background-color: #008089;
    width: 300px;
    min-height: 550px;
    max-height: fit-content;
    padding: 5px;
    margin: 10px auto;
    border: solid;
    border-color: #072446;
    border-radius: 5px;
}



/*-----------Coaches------*/
.coach-img  {
    border-radius: 50%;
    padding: 20px;
    margin-left: 22px;
    margin-top: 15px;
    margin-bottom: 15px;
    border-color: #e1aa12;
    border: solid;
    width: 250px;
    height: 250px;
}

.weight-coach {
    height: 260px;
    width: 100%;
    border-radius: 50%;
}

.team {
    background-color: #013a67;
    width: 340px;
    height: 525px;
    padding: 20px;
    margin: 10px 45px 25px;
    border: solid;
    border-color: #e1aa12;
    border-radius: 10px;
    color: #e1aa12;
    display: inline-block;
}


/*-----------Timetable------*/



.table {
    text-align: center;
    font-family: 'Raleway', sans-serif;
    background-color: #008089;
    border: solid 1em #072446;
    border-radius: 5px;
    margin: 20px;
}

#timetable p {
    color: #24292e;
}

#timetable {
    min-height: fit-content;
    padding: 5px;
    padding-top: 3.5rem;
    width: 70%;
}

.table-title th {
    text-align: center;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    border: solid 5px #072446;
    
}

tbody {
    border: solid 5px #072446;

}

.table-border th {
    border: solid 5px #072446;
}

.table-border td {
    border: solid 5px #072446;
}


.schedule {
    margin: 25px;
    border: 5px;
    padding: 5px;
}

/*-----------SignUp------*/

#signup {
    padding-top: 3.5rem;
}

.sign-up {
   padding-bottom: 20px;
}

.sign-up p {
    color: #24292e;
}

.members-form {
    padding: 20px 60px;
    margin: 10px auto;
    max-width: 70%;
    background-color: #e1aa12;
    border: solid 2px;
    border-color: #072446;
    border-radius: 5px;
}

button[type="submit"] {
   padding-top: 15px;
   padding-bottom: 15px;
   color: #fafafa;
   background-color: #072446;
   margin: 15px auto;
   font-family: 'Monstserrat', sans-serif;
   font-weight: 600;
   
   
}

input {
    padding: 5px 0;
    margin-bottom: 20px;
    margin-top: 20px;
    margin-left: 5px;
}


/*-----------Footer------*/

footer {

    background-color: #072446;
    min-height: 120px;
    padding-top: 20px;
    margin-top: 0px;
    width: 100%;
}


.footer-heading {
    color: #fafafa;
}

.social-link {
    color: #fafafa;
    font-size: 40px;
    padding: 2px;
    margin: 10px;
    display: inline-block;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out; 
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social {
    width: 100%;
    justify-content: right;
}


.social-link:hover {
    color: #e1aa12;
}

.contact-details {
    color: #fafafa;
    margin-bottom: 5px;
    display: block;
    clear: both;
}

.contact-details .key,
.contact-details .value {
    padding-right: 8px;
    display: inline-block;
    justify-content: left;
}

.contact-details .key p,
.contact-details .value p {
    margin: 0;
    padding: 0;
}

.contact-details .key {
    width: 40%;
    align-items: center;
    margin-right: 21px;
    padding-top: 2px;
    vertical-align: top;
}

.contact-details .key p {
    font-weight: 400;
    font-family: 'Monstserral' sans-serif;
    text-align: left;
}

.contact-details .value p {
    position: relative;
    font-weight: 300;
    text-align: justify;
    
}

.footer-contact {
    margin-left: 60px;
    font-family: 'Monstserrat', sans-serif;
    font-weight: 600;
    padding: 20px;
    text-transform: uppercase;

}

/*-----------Video------*/

.video h3{
    text-align: center;

}

.video {
    width: 70%;
    margin: 20px, auto;

}

.workout {
    align-content: center;
}

